Single.php Portrait photos appear wrong aspect ratio on mobile Fixes #19

--- a/wp-content/themes/together-were-more/src/styles/pages/single.scss
+++ b/wp-content/themes/together-were-more/src/styles/pages/single.scss
@@ -1,2 +1,6 @@
 @use "../components/single/hero";
 @use "../components/single/diamond-separator";
+
+.portrait-container {
+	aspect-ratio: 2 / 3;
+}
